fix roq for index
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-white text-tc-ink">
   {#include partials/header.html /}
-  <main>{#insert main /}</main>
+  <main>{#insert /}</main>
   {#include partials/footer.html /}
 </body>
 </html>
