post list in index
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/templates/layouts/post.html
+++ b/templates/layouts/post.html
@@ -3,6 +3,7 @@ layout: main
 attachments: []
 gallery: []
 cover: /assets/hero-banner.jpg
+labelDetails: Voir le détail →
 ---
 
 <!-- Hero article (extrait d'inter-clubs.html) -->
